--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
 <body>
     <section class="upheader">
         <div class="container upheader__wrapper">
-            <div class="upheader__string"><img src="img/n_ico_phone.png" alt="">+7(48751)5-42-32</div>
-            <div class="upheader__string"><img src="img/n_ico_mail.png" alt="">spo.tek@tularegion.ru</div>
+            <div class="upheader__string">
+                <img src="img/n_ico_phone.png" alt="">+7(48751)5-42-32
+            </div>
+            <div class="upheader__string">
+                <img src="img/n_ico_mail.png" alt="">spo.tek@tularegion.ru
+            </div>
             <div class="upheader__socials">
-                <a href="https://vk.com/insultshopi"><i class="fa-brands fa-vk"></i></a>
+                <a href="https://vk.com/insultshopi">
+                    <i class="fa-brands fa-vk"></i>
+                </a>
                 <a href="#"><i class="fa-brands fa-telegram"></i></a>
                 <a href="https://rutube.ru/"><img src="img/n_rutube.png" alt=""></a>
             </div>
@@ -49,7 +55,7 @@
     </nav>
     <section class="story">
         <div class="container">
-            <div class="story__title title">История</div>
+            <div class="story__title title">История музея</div>
             <div class="story__block">
                 <img src="img/story.jpg" alt="">
                 <p>Музей вычислительной техники ГПОУ ТО "ТЭК" был создан в 1986 году, он занимает площадь 65,7 м2. В
@@ -78,10 +84,30 @@
             </div>
             <div class="admin__block">
                 <div class="admin__image">
+                    <img src="img/koroleva.jpg" alt="">
+                    Преподаватель
+                    <br>
+                    <span>Королёва Елена Анатольевна</span>
+                </div>
+                <div class="admin__descr">
+                    Преподает такие предметы, как Математика ПМ.07 Соадминистрирование баз данных и серверов МДК 07.02
+                    Сертификация информационных систем
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="admin">
+        <div class="container">
+            <div class="admin__title title">
+                Основатель музея
+            </div>
+            <div class="admin__block">
+                <div class="admin__image">
                     <img src="img/admin.jpg" alt="">
                     Преподаватель
                     <br>
-                    <span>Голосова Анна Михайловна.</span>
+                    <span>Голосова Анна Михайловна</span>
                 </div>
                 <div class="admin__descr">
                     Преподает такие предметы, как "Основы проектирования баз данных ПМ.05 Проектирование и разработка
@@ -121,7 +147,7 @@
                     <swiper-slide>
                         <div class="exponats__slide">
                             <img src="img/exsponats/C80.png" alt="">
-                            <div class="exponats__slide-title">C80</div>
+                            <div class="exponats__slide-title">Сортировальная машина C80</div>
                             <div class="exponats__descr">С80 занимается группировкой перфокарт по признакам для
                                 дальнейшей обработки на табуляторе. Разновидностью сортировальной машины является
                                 счетно-сортировальная, т. е. имеющая приспособление для подсчета перфокарт в каждой
@@ -177,6 +203,24 @@
                             </div>
                         </div>
                     </swiper-slide>
+                    <swiper-slide>
+                        <div class="exponats__slide">
+                            <img src="img/exsponats/iscra555.psd.png" alt="">
+                            <div class="exponats__slide-title">ИСКРА 555</div>
+                            <div class="exponats__descr">Центральный процессор построен на элементах БИС
+                                серии K589. Основной состав
+                                устройств ЭФБМ: центральный процессор, ПЗУ емкостью до 28
+                                Кбайт, ОЗУ емкостью до 48 Кбайт, пульт управления, печатающее устройство матричного
+                                типа, телекоммуникационные средства. В состав внешних устройств входят: устройство ввода
+                                - вывода с перфоленты, накопитель на магнитной ленте СМ-5300.01, накопители на гибком
+                                магнитном диске EC-5074. Многоканальный процессор теледоступа обеспечивает дистанционное
+                                подключение к ЭФБМ до восьми терминалов «Нева 501».
+                            </div>
+                            <div class="exponats__link">
+                                <a href="">Читать далее...</a>
+                            </div>
+                        </div>
+                    </swiper-slide>
 
                 </swiper-container>
                 <button class="next"><img src="img/arrow.svg" alt=""></button>
@@ -191,7 +235,7 @@
             <div class="form__wrapper">
                 <div class="form__block">
                     <input type="text" placeholder="Введите ваше имя">
-                    <input type="text" placeholder="Введите ваш номер">
+                    <input type="text" placeholder="Введите ваш номер телефона">
                     <input type="text" placeholder="Введите вашу почту">
                     <button class="form__button">Отправить заявку</button>
                 </div>
