--- a/adminAdd.html
+++ b/adminAdd.html
@@ -41,11 +41,14 @@
             </div>
         </div>
     </section>
-    <section class="template-main" id="template">
+    <form action="">
+        <section class="template-main" id="template">
 
-    </section>
-    <button id="editButton">Изменить</button>
-    <button id="addButton">Добавить</button>
+        </section>
+        <button id="editButton" type="button">Изменить</button>
+        <button type="submit" id="addButton">Добавить</button>
+    </form>
+
 
     <script src="js/accordion.js"></script>
     <script src="js/template.js"></script>
