--- a/blog.html
+++ b/blog.html
@@ -57,10 +57,12 @@
                     <div class="post__text">
                         <div class="post__title">Электромеханическая счётно-табличная машина "АСКОТА"</div>
                         <div class="post__descr">Она умела считать только на ленту. Она была плохо приспособлена для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров,
+                            работающих со
                             скоростью 60 знаков в минуту.
                             Она умела считать только на ленту. Она была плохо приспособлена для скоростного набора и
-                            могла удовлетворять потребностям только юных бухгалтеров, работающих со скоростью 60 знаков
+                            могла удовлетворять потребностям только юных бухгалтеров, работающих со скоростью 60
+                            знаков
                             в минуту.</div>
                         <div class="post__link">
                             <a href="">Читать далее...</a>
@@ -72,7 +74,8 @@
                     <div class="post__text">
                         <div class="post__title">Электромеханическая счётно-табличная машина "АСКОТА"</div>
                         <div class="post__descr">Она умела считать только на ленту. Она была плохо приспособлена для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров,
+                            работающих со
                             скоростью 60 знаков в минуту.</div>
                         <div class="post__link">
                             <a href="">Читать далее...</a>
@@ -84,7 +87,8 @@
                     <div class="post__text">
                         <div class="post__title">Электромеханическая счётно-табличная машина "АСКОТА"</div>
                         <div class="post__descr">Она умела считать только на ленту. Она была плохо приспособлена для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров,
+                            работающих со
                             скоростью 60 знаков в минуту.</div>
                         <div class="post__link">
                             <a href="">Читать далее...</a>
@@ -96,7 +100,8 @@
                     <div class="post__text">
                         <div class="post__title">Электромеханическая счётно-табличная машина "АСКОТА"</div>
                         <div class="post__descr">Она умела считать только на ленту. Она была плохо приспособлена для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров,
+                            работающих со
                             скоростью 60 знаков в минуту.</div>
                         <div class="post__link">
                             <a href="">Читать далее...</a>
@@ -108,8 +113,10 @@
                     <div class="post__text">
                         <div class="post__title">Электромеханическая счётно-табличная машина "АСКОТА"</div>
                         <div class="post__descr">Она умела считать только на ленту. Она была плохо приспособлена для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров,
+                            работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо
+                            приспособлена
                             для скоростного набора и могла удовлетворять потребностям только юных бухгалтеров,
                             работающих со скоростью 60 знаков в минуту.</div>
                         <div class="post__link">
