--- a/index.html
+++ b/index.html
@@ -91,7 +91,12 @@
                 </div>
                 <div class="admin__descr">
                     Преподает такие предметы, как Математика ПМ.07 Соадминистрирование баз данных и серверов МДК 07.02
-                    Сертификация информационных систем
+                    Сертификация информационных систем. Обучалась и проходила в АНО ВО "Университет Иннополис" "Цифровые
+                    технологии в преподавании профессиональных дисциплин", 2021г.; ФГБОУ ВО "ТГПУ им. Л.Н. Толстого"
+                    "Фронтиры цифровой трансформации при обучении студентов ИТ-направлений в системе СПО", 2021г.; ФГБОУ
+                    ВО "ТГУ" "Совершенствование профессиональной компетенции учителя-предметника как условие повышения
+                    качества современного образования (Математика)", 2021г., ООО "ГикБреинс" "Цифровая трансформация
+                    современного учителя", 2022г.
 
                 </div>
             </div>
@@ -221,12 +226,38 @@
                             </div>
                         </div>
                     </swiper-slide>
-
                 </swiper-container>
                 <button class="next"><img src="img/arrow.svg" alt=""></button>
                 <button class="prev"><img style="transform: rotateY(180deg);" src="img/arrow.svg" alt=""></button>
             </div>
 
+        </div>
+    </section>
+    <section class="question">
+        <div class="container">
+            <div class="question__title title">Быстрый вопрос</div>
+            <div class="question__descr">Отложите ваши планшеты, смартфоны и телефоны и попробуйте перемножить числа
+                9147 и 5. Как вы это сделаете? Достанете ручку, бумагу и начнете считать в столбик?
+                <br>
+                <span>Правильно!</span>
+            </div>
+            <div class="question__block">
+                <div class="question__image">
+                    <img src="img/john.jpg" alt="">
+                </div>
+                <div class="question__text">Джон Неппер (1550-1617 гг) предложил разрезать школьную таблицу
+                    умножения на 10 полосок и числа разделить диагонально на единицы и десятки. Полоски наклеивались на
+                    деревянные палочки. Это был механический калькулятор, с помощью которого можно выполнять операции
+                    умножения, деления, извлечения квадратных и кубических корней. Его теории позднего периода были
+                    изложены в книге "Rabdologiae seu Numerationis per Virgulas libri duo" («Счёт на волшебных
+                    палочках»).</div>
+            </div>
+            <div class="question__block">
+                <div class="question__image">
+                    <img src="img/question.png" alt="">
+                </div>
+                <div class="question__text-big">9147 * 5 = 45735</div>
+            </div>
         </div>
     </section>
     <section class="form">
@@ -239,7 +270,7 @@
                     <input type="text" placeholder="Введите вашу почту">
                     <button class="form__button">Отправить заявку</button>
                 </div>
-                <img src="img/pngwing.com.png" alt="">
+                <img src="img/message.png" alt="">
 
             </div>
         </div>
