--- a/adminAdd.html
+++ b/adminAdd.html
@@ -46,7 +46,7 @@
 
         </section>
         <button id="editButton" type="button">Изменить</button>
-        <button type="submit" id="addButton">Добавить</button>
+        <button type="button" id="addButton">Добавить</button>
     </form>
 
 
