--- a/adminAdd.html
+++ b/adminAdd.html
@@ -41,13 +41,136 @@
             </div>
         </div>
     </section>
-    <form action="">
-        <section class="template-main" id="template">
 
-        </section>
-        <button id="editButton" type="button">Изменить</button>
-        <button type="button" id="addButton">Добавить</button>
-    </form>
+    <section class="template-main" id="template">
+        <div class="exspo1 hidden-exspo">
+            <div class="exspo1__title title">Название</div>
+            <div class="container exspo1__wrapper">
+                <div class="exspo1__block">
+                    <img class="exspo1__bg" src="/img/example2.webp" alt="">
+                    <div class="exspo1__images">
+                        <img src="/img/exspo1.jpg" alt="">
+                        <img src="/img/exspo2.jpg" alt="">
+                    </div>
+                    <div class="exspo1__block-title">
+                        Электромеханическая счётно-табличная машина "АСКОТА"
+                    </div>
+                    <div class="exspo1__block-descr">
+                        Она умела считать только на ленту. Она была плохо приспособлена для скоростного набора и могла
+                        удовлетворять потребностям только юных бухгалтеров, работающих со скоростью 60 знаков в минуту.
+                        Она умела считать только на ленту. Она была плохо приспособлена для скоростного набора и могла
+                        удовлетворять потребностям только юных бухгалтеров, работающих со скоростью 60 знаков в минуту.
+                        Она умела считать только на ленту. Она была плохо приспособлена для скоростного набора и могла
+                        удовлетворять потребностям только юных бухгалтеров, работающих со скоростью 60 знаков в минуту.
+
+                    </div>
+                    <form action="/addExposition.php" method="POST">
+                        <input type="text" placeholder='Введите название экспозиции' class="hidden"
+                            id="exspo1__block-title" />
+                        <textarea placeholder='Введите информацию о экспозиции' cols="100" rows="10" class="hidden"
+                            id="exspo1__block-descr"></textarea>
+                        <button type="submit">Добавить</button>
+                    </form>
+                    <div class="exspo1__block-link">
+                        <a href="#">Перейти к главной странице</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="exspo2 hidden-exspo">
+            <div class="exspo2__title title">Название</div>
+            <div class="container exspo2__wrapper">
+                <div class="exspo2__block">
+                    <img class="exspo2__bg" src="/img/example1.webp" alt="">
+                    <div class="exspo2__top">
+                        <div class="exspo2__images">
+                            <img src="/img/exspo1.jpg" alt="">
+                        </div>
+                        <div class="exspo2__text">
+                            <div class="exspo2__block-title">
+                                Электромеханическая счётно-табличная машина "АСКОТА"
+                            </div>
+                            <div class="exspo2__block-descr">
+                                Она умела считать только на ленту. Она была плохо приспособлена для скоростного набора и
+                                могла
+                                удовлетворять потребностям только юных бухгалтеров, работающих со скоростью 60 знаков в
+                                минуту. могла
+                                удовлетворять потребностям только юных бухгалтеров, работающих со скоростью 60 знаков в
+                                минуту.
+                            </div>
+                            <form action="/addExposition.php" method="POST">
+                                <input type="text" placeholder='Введите название экспозиции' class="hidden"
+                                    id="exspo2__block-title" />
+                                <textarea placeholder='Введите информацию о экспозиции' cols="100" rows="10"
+                                    class="hidden" id="exspo2__block-descr"></textarea>
+                        </div>
+                    </div>
+                    <div class="exspo2__downtext">
+                        Она умела считать только на ленту. Она была плохо приспособлена для скоростного набора и могла
+                        удовлетворять потребностям только юных бухгалтеров, работающих со скоростью 60 знаков в минуту.
+                        Она умела считать только на ленту. Она была плохо приспособлена для скоростного набора и могла
+                        удовлетворять потребностям только юных бухгалтеров, работающих со скоростью 60 знаков в минуту.
+                        Она умела считать только на ленту. Она была плохо приспособлена для скоростного набора и могла
+                        удовлетворять потребностям только юных бухгалтеров, работающих со скоростью 60 знаков в минуту.
+                        Она умела считать только на ленту. Она была плохо приспособлена для скоростного набора и могла
+                        удовлетворять потребностям только юных бухгалтеров, работающих со скоростью 60 знаков в минуту.
+                        <input type="text" class="hidden" />
+                    </div>
+                    <textarea placeholder='Введите информацию о экспозиции' cols="100" rows="10" class="hidden"
+                        id="exspo2__block-downtext"></textarea>
+                    <button type="submit">Добавить</button>
+                    </form>
+
+                    <div class="exspo1__block-link">
+                        <a href="#">Перейти к главной странице</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="exspo3 hidden-exspo">
+            <div class="exspo3__title title">Название</div>
+            <div class="container exspo3__wrapper">
+                <div class="exspo3__block">
+                    <img class="exspo3__bg" src="img/example4.webp" alt="">
+                    <div class="exspo3__images">
+                        <img src="/img/exspo1.jpg" alt="">
+                        <img src="/img/exspo2.jpg" alt="">
+                    </div>
+                    <div class="exspo3__down">
+                        <div class="exspo3__logo">
+                            <img src="/img/exspo1.jpg" alt="">
+                        </div>
+                        <div class="exspo3__text">
+                            <div class="exspo3__block-title">
+                                Электромеханическая счётно-табличная машина "АСКОТА"
+                            </div>
+                            <div class="exspo3__block-descr">
+                                Она умела считать только на ленту. Она была плохо приспособлена для скоростного набора и
+                                могла
+                                удовлетворять потребностям только юных бухгалтеров, работающих со скоростью 60 знаков в
+                                минуту. могла
+                                удовлетворять потребностям только юных бухгалтеров, работающих со скоростью 60 знаков в
+                                минуту.
+                            </div>
+                            <form action="/addExposition.php" method="POST">
+                                <input type="text" placeholder='Введите название экспозиции' class="hidden"
+                                    id="exspo3__block-title" />
+                                <textarea placeholder='Введите информацию о экспозиции' cols="100" rows="10"
+                                    class="hidden" id="exspo3__block-descr"></textarea>
+                                <button type="submit">Добавить</button>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="exspo3__block-link">
+                        <a href="#">Перейти к главной странице</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <button id="editButton" type="button">Изменить</button>
+    <button type="button" id="addButton">Добавить</button>
 
 
     <script src="js/accordion.js"></script>
