--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <div class="container">
             <div class="nav__links">
                 <li><a class="nav__active" href="index.html">Главная</a></li>
+
                 <li><a href="ecsposition.html">Экспозиция</a></li>
                 <li><a href="blog.html">Блог</a></li>
             </div>
@@ -57,11 +58,11 @@
         <div class="container">
             <div class="story__title title">История музея</div>
             <div class="story__block">
-                <img src="img/story.jpg" alt="">
+                <img src="img/exsponats/math1-2.png" alt="">
                 <p>Музей вычислительной техники ГПОУ ТО "ТЭК" был создан в 1986 году, он занимает площадь 65,7 м2. В
-                    настоящее время экспозиция музея составляет 309 объектов хранения. 239 экспоната являются
-                    подлинными, 6 экспонатов – реконструкции. Книжный фонд музея составляет более 200 источников. Музей
-                    открыт с 9-00 до 16-00 час. Экскурсии для студентов и колледжа и школьников - бесплатные.
+                    настоящее время экспозиция музея составляет 462 экспоната,
+                    88 объектов хранения, 367 экспоната подлинные. Книжный фонд музея составляет более 200 источников.
+                    Музей открыт с 9-00 до 16-00 час. Экскурсии для студентов и колледжа и школьников - бесплатные.
                     Общественную группу музея составляют преподаватели и студенты колледжа.
                 </p>
             </div>
