--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
         <div class="container">
             <div class="story__title title">История музея</div>
             <div class="story__block">
-                <img src="img/exsponats/math1-2.png" alt="">
+                <div class="story__image">
+                    <img src="img/exsponats/math1.png" alt="">
+                </div>
+
                 <p>Музей вычислительной техники ГПОУ ТО "ТЭК" был создан в 1986 году, он занимает площадь 65,7 м2. В
                     настоящее время экспозиция музея составляет 462 экспоната,
                     88 объектов хранения, 367 экспоната подлинные. Книжный фонд музея составляет более 200 источников.
@@ -74,7 +77,9 @@
                     обучающихся; стимулировать творческий потенциал студентов колледжа. В работе музея активно
                     используются современные информационные технологии.
                 </p>
-                <img src="img/story2.jpg" alt="">
+                <div class="story__image">
+                    <img src="img/story2.jpg" alt="">
+                </div>
             </div>
         </div>
     </section>
