--- a/index.html
+++ b/index.html
@@ -61,17 +61,19 @@
                 <div class="story__image">
                     <img src="img/exsponats/math1.png" alt="">
                 </div>
-
                 <p>Музей вычислительной техники ГПОУ ТО "ТЭК" был создан в 1986 году, он занимает площадь 65,7 м2. В
                     настоящее время экспозиция музея составляет 462 экспоната,
-                    88 объектов хранения, 367 экспоната подлинные. Книжный фонд музея составляет более 200 источников.
+                    88 объектов хранения, 367 экспоната подлинные. Книжный фонд музея составляет более 200
+                    источников.
                     Музей открыт с 9-00 до 16-00 час. Экскурсии для студентов и колледжа и школьников - бесплатные.
                     Общественную группу музея составляют преподаватели и студенты колледжа.
                 </p>
+
             </div>
             <div class="story__block">
                 <p>Работа музея осуществляется на основании Положения о музее вычислительной техники и призвана
-                    воспитывать у студентов и школьников гражданственность, бережное отношение к традициям, культуре и
+                    воспитывать у студентов и школьников гражданственность, бережное отношение к традициям, культуре
+                    и
                     истории своего и других народов; содействовать в организации и проведении учебно-воспитательного
                     процесса колледжа; осуществлять программы по воспитанию, обучению, развитию и социализации
                     обучающихся; стимулировать творческий потенциал студентов колледжа. В работе музея активно
@@ -93,16 +95,13 @@
                     <img src="img/koroleva.jpg" alt="">
                     Преподаватель
                     <br>
-                    <span>Королёва Елена Анатольевна</span>
+                    <span>Голосова Анна Михайловна</span>
                 </div>
                 <div class="admin__descr">
-                    Преподает такие предметы, как Математика ПМ.07 Соадминистрирование баз данных и серверов МДК 07.02
-                    Сертификация информационных систем. Обучалась и проходила в АНО ВО "Университет Иннополис" "Цифровые
-                    технологии в преподавании профессиональных дисциплин", 2021г.; ФГБОУ ВО "ТГПУ им. Л.Н. Толстого"
-                    "Фронтиры цифровой трансформации при обучении студентов ИТ-направлений в системе СПО", 2021г.; ФГБОУ
-                    ВО "ТГУ" "Совершенствование профессиональной компетенции учителя-предметника как условие повышения
-                    качества современного образования (Математика)", 2021г., ООО "ГикБреинс" "Цифровая трансформация
-                    современного учителя", 2022г.
+                    Преподает такие предметы, как "Основы проектирования баз данных ПМ.05 Проектирование и разработка
+                    информационных систем МДК05.01 Проектирование и дизайн информационных систем ПМ.07
+                    Соадминистрирование баз данных и серверов МДК07.01 Управление и автоматизация баз данных ПМ.06
+                    Сопровождение информационных систем МДК06.04 Интеллектуальные системы и технологии."
 
                 </div>
             </div>
