--- a/index.html
+++ b/index.html
@@ -267,12 +267,23 @@
     </section>
     <section class="form">
         <div class="container form__bg">
-            <div class="form__title title">Форма обратной связи</div>
+            <div class="form__title title">Заказать экскурсию для школьников</div>
             <div class="form__wrapper">
                 <div class="form__block">
-                    <input type="text" placeholder="Введите ваше имя">
-                    <input type="text" placeholder="Введите ваш номер телефона">
-                    <input type="text" placeholder="Введите вашу почту">
+                    <input type="text" placeholder="Школа">
+                    <input type="number" max="11" min="1" maxlength="2" placeholder="Класс">
+                    <select name="" id="">
+                        <option value="">История развития вычислительной техники</option>
+                        <option value="">Развитие информационных технологий</option>
+                        <option value="">История создания языков программирования</option>
+                        <option value="">Носители информации</option>
+                        <option value="">
+                            Как считали без электричества?
+                        </option>
+                        <option value="">Перфокарта- IT символ XX века.</option>
+                        <option value="">Лебедев С.А.- основоположник ЭВМ.</option>
+                        <option value="">История развития сетей передачи данных.</option>
+                    </select>
                     <button class="form__button">Отправить заявку</button>
                 </div>
                 <img src="img/message.png" alt="">
@@ -291,18 +302,7 @@
             </div>
         </div>
     </section>
-    <section class="subscribe">
-        <div class="container">
-            <div class="subscribe__wrapper">
-                <div class="subscribe__title title"> Подпишитесь на наши новости</div>
-                <div class="subscribe__descr">Подпишитесь на наши новости и первыми узнавайте о событиях в музее</div>
-                <div class="subscribe__block">
-                    <input type="text" name="" id="" placeholder="Ваша почта">
-                    <button class="">Отправить заявку</button>
-                </div>
-            </div>
-        </div>
-    </section>
+
     <footer class="footer">
         <div class="container footer__wrapper">
             <div class="footer__logo"><img src="img/logo.png" alt=""></div>
