--- a/index.html
+++ b/index.html
@@ -83,6 +83,84 @@
                     <img src="img/story2.jpg" alt="">
                 </div>
             </div>
+            <div class="story__main">
+                <p>В 1985 году администрация откликнулась на просьбу организовать музей вычислительной техники. В 1986
+                    год музею вычислительной техники техникума (так в то время назывался наш колледж) выделили площадку
+                    в 65,7 м2 и начался процесс наполнения музея экспонатами. 1.02.1986 г музей принял первых
+                    посетителей. Хранителем музея назначена преподаватель Голосова Анна Михайловна.
+                <table class="story__table">
+                    <tr>
+                        <td> Статистические данные</td>
+                        <td> 2012г</td>
+                        <td> 2013г</td>
+                        <td> 2014г</td>
+                        <td> 2015г</td>
+                        <td> 2016г</td>
+                        <td> 2017г</td>
+                        <td> 2023г</td>
+                    </tr>
+                    <tr>
+                        <td>Общее количество эскпонатов</td>
+                        <td>278</td>
+                        <td>280</td>
+                        <td>301</td>
+                        <td>312</td>
+                        <td>321</td>
+                        <td>321</td>
+                        <td>462</td>
+                    </tr>
+                </table>
+                В музее сформированы совет и ежегодно обновляемый актив из сотрудников, преподавателей и студентов
+                колледжа.
+                <ul class="story__list">
+                    <br> На базе музея проводятся разнообразные мероприятия:
+                    <li>- экскурсии и видеолекции для студентов колледжа в рамках учебно- воспитательного процесса;
+                    </li>
+                    <li>- экскурсии для школьников и гостей колледжа;</li>
+                    <li>- разнообразные акции, например, «Неделя без турникетов»;</li>
+                    <li>- открытые классные часы и классные часы в группах;</li>
+                    <li>- выступления перед абитуриентами на Дне открытых дверей колледжа;</li>
+                    <li>- участие в конкурсе НИР студентов колледжа;</li>
+                    <li>- кружковая работа;</li>
+                    <li>- участия в российских, областных и местных конференциях и конкурсах различного уровня.</li>
+                </ul>
+                <br>
+                Для внедрения современных эффективных форм научно-просветительской деятельности в работе музея
+                вычислительной техники разрабатываются пятилетние Музейно-педагогические программы, которые
+                рассматриваются и одобряются на заседании совета колледжа.
+                Музей получил звание «Музей образовательного учреждения» (СВИДЕТЕЛЬСТВО № 14596 от 10.12.2012 г.)
+                </p>
+            </div>
+        </div>
+    </section>
+    <section class="guests">
+        <div class="container">
+            <div class="guests__title title">Экскурсии в музее</div>
+            <div class="guests__slider">
+                <swiper-container class="swiper" slides-per-view="2" space-between="50">
+                    <swiper-slide>
+                        <img src="../img/guests1.jpg" alt="">
+                    </swiper-slide>
+                    <swiper-slide>
+                        <img src="../img/guests2.jpg" alt="">
+                    </swiper-slide>
+                    <swiper-slide>
+                        <img src="../img/guests3.jpg" alt="">
+                    </swiper-slide>
+                    <swiper-slide>
+                        <img src="../img/guests4.jpg" alt="">
+                    </swiper-slide>
+                    <swiper-slide>
+                        <img src="../img/guests5.jpg" alt="">
+                    </swiper-slide>
+                    <swiper-slide>
+                        <img src="../img/guests6.jpg" alt="">
+                    </swiper-slide>
+
+                </swiper-container>
+                <button class="next"><img src="../img/arrow.svg" alt=""></button>
+                <button class="prev"><img style="transform: rotateY(180deg);" src="../img/arrow.svg" alt=""></button>
+            </div>
         </div>
     </section>
     <section class="admin">
@@ -258,8 +336,24 @@
                     палочках»).</div>
             </div>
             <div class="question__block">
-                <div class="question__image">
-                    <img src="img/question.png" alt="">
+                <div class="question__image" id="presentation">
+                    <img src="../img/presentation1.png" alt="">
+                    <img src="../img/presentation2.png" alt="">
+                    <img src="../img/presentation3.png" alt="">
+                    <img src="../img/presentation4.png" alt="">
+                    <img src="../img/presentation5.png" alt="">
+                    <img src="../img/presentation6.png" alt="">
+                    <img src="../img/presentation7.png" alt="">
+                    <img src="../img/presentation8.png" alt="">
+                    <img src="../img/presentation9.png" alt="">
+                    <img src="../img/presentation10.png" alt="">
+                    <img src="../img/presentation11.png" alt="">
+                    <img src="../img/presentation13.png" alt="">
+                    <div class="question__buttons">
+                        <button class="button prevButton">Предыдущее действие</button>
+                        <button class="button nextButton">Следующее действие</button>
+                    </div>
+
                 </div>
                 <div class="question__text-big">9147 * 5 = 45735</div>
             </div>
@@ -328,31 +422,36 @@
         </div>
     </section>
 
-
-
-
-
-
-
-
-
+    <script src="js/presentationSlider.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script>
     <script>
-        const swiperEl = document.querySelector('swiper-container');
-        const next = document.querySelector('.next');
-        const prev = document.querySelector('.prev');
 
-        next.addEventListener('click', () => {
-            swiperEl.swiper.slideNext();
+        const swiperEl = document.querySelectorAll('swiper-container');
+        const next = document.querySelectorAll('.next');
+        const prev = document.querySelectorAll('.prev');
+
+        next.forEach((element) => {
+            element.addEventListener('click', () => {
+                swiperEl.forEach((element) => {
+                    element.swiper.slideNext();
+                });
+            });
         });
 
-        prev.addEventListener('click', () => {
-            swiperEl.swiper.slidePrev();
+        prev.forEach((element) => {
+            element.addEventListener('click', () => {
+                swiperEl.forEach((element) => {
+                    element.swiper.slidePrev();
+                })
+            });
         });
 
         if (screen.width < 768) {
-            swiperEl.setAttribute('slides-per-view', '1');
-        }
+            swiperEl.forEach((element) => {
+                element.setAttribute('slides-per-view', '1');
+            });
+        };
+
     </script>
 </body>
 
